@@ -11,3 +11,8 @@ roll.single.end=<p>
 roll.multiple.start=your dice are: 
 roll.multiple.end=<p>
 message.maxlength=200
+#mark error the start and end of error delimiters
+#if error start and and are found in the returned email, 
+# we do not report dice, but instead show the error message.
+error.start=fatal error:
+error.end=!
