@@ -1,5 +1,7 @@
 Changes for 0.8.5
 
+* handle marti dice server error messages (sgb,clausewitz)
+
 * allow setting of lobby server lookup url in a file called lobby.properties with a key server in the root triplea directory (sgb)
 
 * fix max select when more than one type of unit present (sgb)
